<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parqueo</string>
    <string name="menu_settings">Settings</string>
    <string name="app_title">Prohibido Parquear</string>

    <!-- Main Layout -->
    <string name="main_layout_title">Consideraciones</string>
    <string name="main_layout_content">        Al tomar la foto verifique que en la imagen aparezca claramente la placa del vehículo y la señal de prohibido parquear, 
        Además la aplicación requiere de internet para enviar la información.	</string>
    <string name="main_layout_btn_ok_text">OK</string>

    <!-- Take a Picture Layout -->
    <string name="take_a_picture_layout_title">Tome una foto</string>
    <string name="take_a_picture_layout_btn_help">Ayuda</string>
    <string name="take_a_picture_layout_content_error_picture_type">No fue posible procesar la fotografía, verifica que has seleccionado una imagen de el álbum de fotos de la cámara e inténtalo nuevamente. Algunas imágenes hacen parte de álbumes que están en internet.</string>

    <!-- Preview Layout -->
    <string name="preview_layout_title">¿Está Bien?</string>

    <!-- Geographic Location Layout -->
    <string name="graphics_layout_title">Guardando su ubicación</string>

    <!-- Dirección Layout -->
    <string name="direccion_layout_title">Ingrese dirección</string>
    <string name="direccion_layout_ok_button">Continuar</string>
    <string name="direccion_layout_back_button">Atras</string>
    <string name="direccion_layout_error_input">Debe ingresar la dirección</string>

    <!-- Thanks Layout -->
    <string name="thanks_layout_title_ok">Gracias</string>
    <string name="thanks_layout_title_error">Error</string>
    <string name="thanks_layout_espere_texto">Espere por favor&#8230;</string>
    <string name="thanks_layout_title_ok_content">Su aporte es de vital importancia para nuestra ciudad.</string>
    <string name="thanks_layout_title_ok_error">No se pudo enviar el reporte.</string>
    <string name="thanks_layout_title_error_image">No se pudo enviar el reporte.</string>
    <string name="thanks_layout_title_btn_reintentar">Reintentar</string>
    <string name="thanks_layout_title_btn_nuevo">Nuevo Reporte</string>
    <string name="thanks_layout_title_btn_exit">Salir</string>
    

    <!-- Dialog GPS -->
    <string name="dialog_no_gps_title">¡Warning GPS!</string>
    <string name="dialog_no_gps_content">No fué posible establecer la ubicación del lugar, la ubicación es detectada a través de la Red Celular y Wifi.\n¿Desea verificar la configuración de ubicación por Red?.</string>
    <string name="dialog_no_gps_btn_active">Activar GPS</string>
    <string name="dialog_no_gps_btn_reintentar">Reintentar</string>
    <string name="dialog_no_gps_btn_direccion">Ingresar Dirección</string>

    <!-- Dialog INTERNET -->
    <string name="dialog_no_internet_title">¡Error de red!</string>
    <string name="dialog_no_internet_content">No fué posible enviar el reporte. Por favor verifique su conexión a internet e inténtelo nuevamente.</string>
    <string name="dialog_no_internet_content_category">No fue posible obtener las categorias. Por favor verifique su conexión a internet e inténtelo nuevamente.</string>
    <string name="dialog_no_internet_btn_reintentar">Reintentar</string>
    <string name="dialog_no_internet_btn_cancelar">Cancelar</string>
    <string name="dialog_no_internet_error_status_false_send_event">Ocurrio un error a intentar enviar el reporte al servidor\nPor favor intente más tarde.</string>

    <!-- Dialog NO IMAGE -->
    <string name="dialog_no_image_title">¡Atención!</string>
    <string name="dialog_no_image_content">Para proceder debe tomar por lo menos una foto al infractor.</string>
    <string name="dialog_no_image_btn_active">OK</string>
    
    <!-- Dialog EXIT -->
    <string name="dialog_exit_title">¡Atención!</string>
    <string name="dialog_exit_content">¿Seguro que desea salir de la aplicación?</string>
    <string name="dialog_exit_btn_aceptar">Si</string>
    <string name="dialog_exit_btn_cancelar">No</string>
    
    <!-- Dialog BACK ADDRESS -->
    <string name="dialog_back_address_title">¡Atención!</string>
    <string name="dialog_back_address_content">¿Desea dejar de ingresar la dirección?</string>
    <string name="dialog_back_address_btn_aceptar">Detectar por GPS</string>
    <string name="dialog_back_address_btn_cancelar">Cancelar</string>
    
    <string name="index_informacionImagen">Prohibido parquear</string>
    <string name="splashscreen_informacion_imagen">Prohibido parquear</string>
    <string name="title_activity_transparent">TransparentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="activity_transparent_capturar_imagen">Presione aqui para tomar la foto</string>
    <string name="transparent_activity_cerrar">Cerrar</string>
    
    <!-- Dialog IMAGE GALLERY -->
    <string name="continuar_sin_imagen">¿Desea continuar sin una fotografía del menor?</string>
    <string name="activity_categorias_listado_categorias">Listado de categorias</string>
    <string name="name_category">Nombre de la categoria</string>

 
    <string name="categories_layout_list">Lista de categorias</string>
    
     <!-- Dialog Categorias -->
    <string name="dialog_no_category_title">¡Error!</string>
    <string name="dialog_no_category_content">No fué posible cargar las categorias. Inténtelo nuevamente.</string>
    <string name="dialog_no_category_btn_reintentar">Reintentar</string>
    <string name="dialog_no_category_btn_salir">Salir</string>

    
</resources>